# financial-simulation-model

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  development.md  getting-started.md  index.md
src/finmodel/: __init__.py  asset.py  portfolio.py
tests/: __init__.py  test_asset.py  test_portfolio.py
